finalized 1st iteration with flexbox

--- a/about.html
+++ b/about.html
@@ -14,16 +14,15 @@
     <header>
 		<div class="banner">Andy Gauthier</div>
 		<h2>Software Engineer</h2>
-	  </header>
+    </header>
+    
+    <nav class= "menu">
+      <a href="index.html">Home</a>
+      <a href="#">Projects</a>
+      <a href="contact.html">Contact</a>
+    </nav>
 
     <main>
-        <nav>
-          <div class="links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-          </div>
-        </nav>
       <section>
         <p>I am a software engineer living in Milford, Massachusetts.</p>
         <p>What I do: </p>
@@ -32,8 +31,6 @@
           <li>Produce clean, efficient and error-free code</li>
           <li>Work to solve problems through collaboration with like-minded individuals</li>
         </ul>
-        <p>Please take a look at my portfolio and feel free to contact me!</p>
-
       </section>
 
       <section>
@@ -43,7 +40,7 @@
 
         <p>By becoming a student at <a href="http://thinkful.com">Thinkful</a>, I've taken the first steps on my journey and have not been happier!</a></p>
 
-        <p>If you're looking to hire a new developer (or are looking for a partner for a hackathon/meet-up) please reach out! I am so excited to work with other developers to build great software.</p>
+        <p class="p-about">If you're looking to hire a new developer (or are looking for a partner for a hackathon/meet-up) please reach out! I am so excited to work with other developers to build great software.</p>
       </section>
     </main>
 
