--- a/index.html
+++ b/index.html
@@ -12,22 +12,21 @@
   </head>
   <body>
     <header>
-		<div class="banner">Andy Gauthier</div>
-		<h2>Software Engineer</h2>
-	  </header>
+        <div class="banner">Andy Gauthier</div>
+        <h2>Software Engineer</h2>
+    </header>
+    
+    <nav class= "menu">
+      <a href="about.html">About</a>
+      <a href="#">Projects</a>
+      <a href="contact.html">Contact</a>
+    </nav>
 
     <main>
-        <nav>
-          <div class="links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-          </div>
-        </nav>
       <section>
         <img src="images/me.PNG" alt="Andy Gauthier - Profile Photo">
       </section>
-
+      <p class="p-home">Please take a look at my portfolio and feel free to contact me!</p>
     </main>
 
     <footer>
