--- a/contact.html
+++ b/contact.html
@@ -11,22 +11,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <header>
-		<div class="banner">Andy Gauthier</div>
+      <header>
+        <div class="banner">Andy Gauthier</div>
 		<h2>Software Engineer</h2>
 	  </header>
 
     <main>
-      <nav>
-        <div class="links">
+      <nav class= "menu">
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
-        </div>
+          <a href="#">Projects</a>
       </nav>
       <section id="contact">        
         <h2 class="border-top">Contact Andy</h2>
-        <p>I'd love to hear from you! Please feel free to <a href="mailto: amgauthier1992@gmail.com">contact me</a> or follow me:</p>
+        <p class="p-contact">I'd love to hear from you! Please feel free to <a href="mailto: amgauthier1992@gmail.com">contact me</a> or follow me:</p>
         <ol>
           <li>
             <a href="https://www.linkedin.com/in/andrewmgauthier/">LinkedIn</a>
@@ -35,7 +33,9 @@
              <a href="https://github.com/amgauthier1992">GitHub</a>
           </li>
         </ol>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47325.19166997941!2d-71.55609373402044!3d42.15404267540453!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e4725761b1baa1%3A0x82012c3c2860a425!2sMilford%2C%20MA!5e0!3m2!1sen!2sus!4v1591384589860!5m2!1sen!2sus" width="450" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <div class="google-maps">
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47325.19166997941!2d-71.55609373402044!3d42.15404267540453!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e4725761b1baa1%3A0x82012c3c2860a425!2sMilford%2C%20MA!5e0!3m2!1sen!2sus!4v1591384589860!5m2!1sen!2sus" width="" height="" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
         </section>
     </main>
 
