Added 1st project

--- a/about.html
+++ b/about.html
@@ -11,17 +11,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
+
+    <!--Header-->
     <header>
-		<div class="banner">Andy Gauthier</div>
-		<h2>Software Engineer</h2>
+      <h1 class="banner">Andy Gauthier</h1>
+		  <h2>Software Engineer</h2>
     </header>
     
+    <!--Nav Links-->
     <nav class= "menu">
       <a href="index.html">Home</a>
-      <a href="#">Projects</a>
+      <a href="projects.html">Projects</a>
       <a href="contact.html">Contact</a>
     </nav>
 
+    <!--Main Content-->
     <main>
       <section>
         <p>I am a software engineer living in Milford, Massachusetts.</p>
@@ -33,22 +37,24 @@
         </ul>
       </section>
 
+      <hr>
+
       <section>
       <h2 class="border-top">About Andy</h2>
         <p>After graduating college, I worked in the financial services industry for a few years. I recently took a huge leap of faith and decided to leave my corporate job to pursue a career as a software developer. I have always had a passion for technology and also enjoy solving intricate problems. I also enjoy traveling and exploring new places. My dream is to be able to travel with my family and be able to work remotely from anywhere. By pursuing a career in this field, I hope to achieve the flexibility to live the lifestyle that I would like to lead.
         </p>
 
-        <p>By becoming a student at <a href="http://thinkful.com">Thinkful</a>, I've taken the first steps on my journey and have not been happier!</a></p>
+        <p>By becoming a student at <a target="_blank" href="http://thinkful.com">Thinkful</a>, I've taken the first steps on my journey and have not been happier!</p>
 
         <p class="p-about">If you're looking to hire a new developer (or are looking for a partner for a hackathon/meet-up) please reach out! I am so excited to work with other developers to build great software.</p>
       </section>
     </main>
 
+    <!--Footer-->
     <footer>
       <p>&copy; Andy Gauthier</p>
     </footer>
 
-    
     <script src="script.js"></script>
   
   </body>
