--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
+    <!--Header-->
     <header>
-        <div class="banner">Andy Gauthier</div>
-        <h2>Software Engineer</h2>
+      <h1 class="banner">Andy Gauthier</h1>
+      <h2>Software Engineer</h1>
     </header>
-    
+
+    <!--Nav Links-->
     <nav class= "menu">
       <a href="about.html">About</a>
-      <a href="#">Projects</a>
+      <a href="projects.html">Projects</a>
       <a href="contact.html">Contact</a>
     </nav>
 
+    <!--Main Content-->
     <main>
       <section>
         <img src="images/me.PNG" alt="Andy Gauthier - Profile Photo">
@@ -29,6 +32,7 @@
       <p class="p-home">Please take a look at my portfolio and feel free to contact me!</p>
     </main>
 
+    <!--Footer-->
     <footer>
       <p>&copy; Andy Gauthier</p>
     </footer>
