Added contact form and relevant styles

--- a/contact.html
+++ b/contact.html
@@ -37,11 +37,23 @@
              <a target="_blank" href="https://github.com/amgauthier1992">GitHub</a>
           </li>
         </ol>
+        <!--Contact Form-->
+        <form action="#" method="POST">
+          <label for="user-name">Name:</label>
+          <input id="user-name" type="text" name="name">
+
+          <label for="user-email">Email:</label>
+          <input id="user-email" type="text" name="email">
+
+          <label for="user-message">Message:</label>
+          <textarea id="user-message" name="message"></textarea>
+          <button type="submit">Submit</button>
+        </form>
         <!--Google Maps-->
         <div class="google-maps">
         <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47325.19166997941!2d-71.55609373402044!3d42.15404267540453!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e4725761b1baa1%3A0x82012c3c2860a425!2sMilford%2C%20MA!5e0!3m2!1sen!2sus!4v1591384589860!5m2!1sen!2sus" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
-        </section>
+      </section>
     </main>
 
     <!--Footer-->
