added required changes

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <main>
       <section id="contact">        
         <h2 class="border-top">Contact Andy</h2>
-        <p class="p-contact">I'd love to hear from you! Please feel free to <a href="mailto:amgauthier1992@gmail.com">contact me</a> or follow me:</p>
+        <p class="p-contact">I'd love to hear from you! Please feel free to contact me, or follow me:</p>
         <ol class="contact-links">
           <li>
             <a target="_blank" href="https://www.linkedin.com/in/andrewmgauthier/">LinkedIn</a>
@@ -38,7 +38,7 @@
           </li>
         </ol>
         <!--Contact Form-->
-        <form action="#" method="POST">
+        <form action="mailto:amgauthier1992@gmail.com" method="POST">
           <label for="user-name">Name:</label>
           <input id="user-name" type="text" name="name">
 
