--- a/projects.html
+++ b/projects.html
@@ -27,9 +27,9 @@
     <!--Main Content-->
     <main>
       <section class="project">
-        <h2 class="project-one"><a target="_blank" href="https://thinkful-ei-orka.github.io/quiz-app-Andy-Sherry/">Quiz App-Animal Groups</a></h2>
+        <h2 class="project-one"><a target="_blank" href="https://github.com/thinkful-ei-orka/quiz-app-Andy-Sherry">Quiz App-Animal Groups</a></h2>
         <p class="p-one-detail">A basic quiz application designed using Jquery</p>
-        <img class="animal" src="images/giraffe.png" alt="Giraffe">
+        <a target="_blank" href="https://thinkful-ei-orka.github.io/quiz-app-Andy-Sherry/"><img class="animal" src="images/giraffe.png" alt="Giraffe"></a>
       </section>
     </main>
 
