added buttons to project page with relevant styles

--- a/projects.html
+++ b/projects.html
@@ -27,9 +27,15 @@
     <!--Main Content-->
     <main>
       <section class="project">
-        <h2 class="project-one"><a target="_blank" href="https://github.com/thinkful-ei-orka/quiz-app-Andy-Sherry">Quiz App-Animal Groups</a></h2>
+        <h2 class="project-one">Quiz App-Animal Groups</h2>
         <p class="p-one-detail">A basic quiz application designed using Jquery</p>
-        <a target="_blank" href="https://thinkful-ei-orka.github.io/quiz-app-Andy-Sherry/"><img class="animal" src="images/giraffe.png" alt="Giraffe"></a>
+        <img class="animal" src="images/giraffe.png" alt="Giraffe">
+        <a target="_blank" href="https://thinkful-ei-orka.github.io/quiz-app-Andy-Sherry/">
+          <button class="p-button p-btn-one" type="button" style="cursor: pointer">Live App</button>
+        </a>
+        <a target="_blank" href="https://github.com/thinkful-ei-orka/quiz-app-Andy-Sherry">
+          <button class="p-button p-btn-two" type="button" style="cursor: pointer">Github</button>
+        </a>
       </section>
     </main>
 
