--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
           </li>
         </ol>
         <!--Contact Form-->
-        <form action="mailto:amgauthier1992@gmail.com" method="POST">
+        <form action="https://formspree.io/mjvaoddv" method="POST" enctype="multipart/form-data">
           <label for="user-name">Name:</label>
           <input id="user-name" type="text" name="name">
 
